marked up a bit <PROFECO#3450>

--- a/wiki/PROFECO.wikitext
+++ b/wiki/PROFECO.wikitext
@@ -1,6 +1,12 @@
 ==Spanish==
 ===Abbreviation===
+'''PROFECO'''
 
 *[[Procuraduría Federal del Consumidor]], a Mexican public organisation
 
-*[[Diminutivo pejorativo de Professor]], Em Português
+----
+==Portuguese==
+===Abbreviation===
+'''profeco'''
+
+# pejorativo short form for professor
