--- a/wiki/lightspeed.wikitext
+++ b/wiki/lightspeed.wikitext
@@ -12,5 +12,6 @@
 *[[German]]: [[Lichtgeschwindigkeit]] ''f''
 *[[Italiano]]: [[velocità]] della [[luce]] ''f''
 *[[Latin]]: [[velocitas]] [[lumen|luminis]] ''f''
+*[[Lithuanian]]: [[šviesos greitis]] ''m''
 *[[Russian]]: [[скорость света]] ''f''
 *[[Breton]]: [[tizh al luc'h]]
