--- a/wiki/planet.wikitext
+++ b/wiki/planet.wikitext
@@ -43,6 +43,7 @@ From Greek '''[[planetes]]''', ''wanderer''
 *{{ko}}: [[행성]] [行星] (haengseong)
 *{{la}}: [[stella errans]] ''f'', [[planeta]] ''f''
 *{{lv}}: [[planēta]] ''f''
+*{{lt}}: [[planeta]] ''f''
 *{{lb}}: [[Planéit]] ''m''
 *{{ms}}: planet
 *{{no}}: planet
