--- a/wiki/stonefish.wikitext
+++ b/wiki/stonefish.wikitext
@@ -1,4 +1,4 @@
 ==English==
 
 ===Noun===
-A poisonous fish of the species ''Synaceia'', found in the [[w:Indian Ocean]] and [[w:Pacific Ocean]]. Stonefish hide from predators by disguising themselves as a stone. Both the Reef Stonefish, ''Synanceia verrucosa'', and the Estuary Stonefish, ''Synanceia horrida'', emit a potent venom through spines on the dorsal area.
+A venomous tropical marine fish resembling a piece of rock, of the species ''Synaceia'', found in the [[w:Indian Ocean]] and [[w:Pacific Ocean]]. Both the Reef Stonefish, ''Synanceia verrucosa'', and the Estuary Stonefish, ''Synanceia horrida'', emit a potent venom through spines in the dorsal fin.
