--- a/wiki/mars.wikitext
+++ b/wiki/mars.wikitext
@@ -32,6 +32,7 @@ Latin ''[[Mars]]'', from older Latin '''[[Mavors]]'''.  The candy bar is named a
 *Italian: [[Marte]] ''m'' (1, 2)
 *Japanese: [[火星]] ([[かせい]], kasei)
 *Latin: Mars ''m'' (1, 2, 3)
+*Lithuanian: [[Marsas]] ''m''
 *{{ms}}: [[Marikh]] (1)
 *Portuguese: [[Marte]] (1, 2, )
 *Romanian: [[Marte]] (1, 2, )
