--- a/wiki/conductor.wikitext
+++ b/wiki/conductor.wikitext
@@ -17,6 +17,7 @@
 *{{de}}: [[Dirigent]] ''m'' (1), [[Schaffner]] ''m'' (2), [[Leiter]] ''m'' (3)
 *Interlingua : [[director de orchestra]] (1), [[billetero]] (2), conductor (3)
 *Japanese: [[指揮者]] (しきしゃ, shikisha) (1)
+*Lithuanian: [[dirigentas]] ''m'' (1); [[konduktorius]] ''m'' (2); [[laidininkas]] ''m'' (3)
 *Polish: [[dyrygent]] ''m'' (1), [[konduktor]] ''m'' (2), [[przewodnik]] ''m'' (3)
 *Portuguese: [[maestro]] ''m'' (1), [[condutor]] ''m'' (2,3)
 *Spanish: conductor
