--- a/wiki/resistor.wikitext
+++ b/wiki/resistor.wikitext
@@ -6,4 +6,5 @@
 ====Translation====
 *Chinese: [[反抗]][[者]] (1), [[電阻]] (2)
 *Finnish: [[vastus]] (2), [[resistori]] (2)
+*Lithuanian: [[pasipriešinimo narys]] ''m'' (1); [[varžas]] ''f'' (2)
 *Slovak: [[odporca]] ''m'' (1), [[odpor]] (2) ''m''
