--- a/wiki/pineapple.wikitext
+++ b/wiki/pineapple.wikitext
@@ -26,6 +26,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[ananasas]] ''m''
 *Spanish: [[piña]] ''f'', [[ananás]] ''m''
 |}
 |}
@@ -50,6 +51,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[ananasas]] ''m''
 *Portuguese: [[ananás]] ''m'', [[abacaxi]] ''m''
 *Russian: [[ананас]] ''m''
 *Spanish: [[piña]] ''f'', [[ananás]] ''m''
