--- a/wiki/semiconductor.wikitext
+++ b/wiki/semiconductor.wikitext
@@ -10,6 +10,7 @@
 *French: [[semiconducteur]] ''m''
 *{{de}}: [[Halbleiter]] ''m''
 *Japanese: [[半導体]] (はんどうたい, handōtai)
+*Lithuanian: [[puslaidininkis]] ''m''
 *Polish: [[półprzewodnik]] ''m''
 *Swedish: [[halvledare]] ''c''
 
