--- a/wiki/bowl.wikitext
+++ b/wiki/bowl.wikitext
@@ -23,7 +23,7 @@ Probably from the French ''[[boule]]'', a ball.
 *{{fi}}: (1): [[kulho]], [[kuppi]], [[malja]]
 *{{fr}}: (1): [[bol]] ''m''
 *{{it}}: (1): [[scodella]] ''f''
-*Lithuanian: [[dubuo]] ''m'' (1); [[dubenėlis]] ''mm'' (3)
+*Lithuanian: [[dubuo]] ''m'' (1); [[dubenėlis]] ''m'' (3)
 *{{es}}: (1): [[taz&oacute;n]] ''m''
 
 ===Verb===
