--- a/wiki/insulator.wikitext
+++ b/wiki/insulator.wikitext
@@ -9,6 +9,7 @@
 *Finnish: [[eriste]]
 *French: [[isolateur]] ''m'' (1,2)
 *{{de}}: [[Isolierstoff]] ''m'' (1), [[Isolator]] ''m'' (1, 2)
+*Lithuanian: [[izoliatorius]] ''m'' (1, 2)
 *Polish: [[izolator]] ''m'' (1,2)
 *Slovak: [[izolátor]] ''m''
 *Swedish: [[isolering]] (1), [[isolator]] ''c'' (2)
