--- a/wiki/pine.wikitext
+++ b/wiki/pine.wikitext
@@ -19,6 +19,7 @@
 *French: [[pin#French|pin]] ''m''
 *Italian: [[pino]] ''m''
 *Japanese: [[松]] ([[まつ]])
+*Lithuanian: [[pušis]] ''f'' (1, 2)
 *Welsh: [[pîn]] (1,2)
 
 ===Intransitive Verb===
