/* Translations */ <in-law#4501>

--- a/wiki/in-law.wikitext
+++ b/wiki/in-law.wikitext
@@ -5,5 +5,5 @@
 ====Translations====
 *Dutch: [[aangetrouwd]] [[familielid]], [[schoonfamilie]] ''pl''
 *Russian: no translation, circumlocution required: ''родня сo стороны мужа или жены''
-*[[Spanish]]: [[relativo]] ''m''
+*[[Spanish]]: [[relativo]] ([[político]]) ''m''
 *Swedish: [[släkting genom giftermål]], [[ingift]]
