--- a/wiki/current.wikitext
+++ b/wiki/current.wikitext
@@ -13,6 +13,7 @@
 *French: [[courant]]
 *German: [[Fließen]] ''n'' (1), [[Strom]] ''m'' (1, 2)
 *Interlingua: [[currente]]
+*Lithuanian: [[srovė]] ''f''
 *Portuguese: [[corrente]] ''f'' (1, 2)
 *Slovak: [[tok]] ''m'' (1), [[prúd]] (1, 2)
 *Swedish: [[ström]] ''c'' (1,2)
