--- a/wiki/faint.wikitext
+++ b/wiki/faint.wikitext
@@ -6,6 +6,10 @@
 
 #The act of fainting, or the state of one who has fainted; a swoon. [R.] See Fainting, n.
 
+
+====Translations====
+*Lithuanian: [[nualpimas]] ''m''
+
 ===Adjective===
 
 '''faint'''
