--- a/wiki/current.wikitext
+++ b/wiki/current.wikitext
@@ -31,6 +31,7 @@
 *German: [[gegenwärtig]]
 *Italian: [[attuale]]
 *Interlingua: [[actual]], [[currente]]
+*Lithuanian: [[einamas]] ''m'', [[esamas]] ''m''
 *Portuguese: [[actual]] ''(pt)'', [[atual]] ''(br)'', [[corrente]], [[em curso]]
 *Slovak: [[súčasný]] ''m'', [[súčasná]] ''f'', [[súčasné]] ''n''
 *Spanish: [[actual]]
