--- a/wiki/dessert.wikitext
+++ b/wiki/dessert.wikitext
@@ -11,6 +11,7 @@
 
 ===Translations===
 *Finnish: [[jälkiruoka]]
+*Lithuanian: [[desertas]] ''m''
 *Persian: [[پس غذا]] (pas-ghaza)
 
 ===Synonym===
