--- a/wiki/sour.wikitext
+++ b/wiki/sour.wikitext
@@ -1,1 +1,9 @@
 A [[taste]] sensation associated with [[acid]]s.
+
+1. Noun.
+
+2. Adjective.
+
+
+====Translations====
+*Lithuanian: (1) [[rūgštumas]] ''m''; (2): [[rūgštus]] ''m'', [[rūgšti]] ''f'', [[rūgštu]] ''n''
