--- a/wiki/faint.wikitext
+++ b/wiki/faint.wikitext
@@ -4,11 +4,15 @@
 
 '''faint'''
 
-#The act of fainting, or the state of one who has fainted; a swoon. [R.] See Fainting, n.
+1. The act of fainting.
+
+2. The state of one who has fainted; a swoon. [R.] 
+
+See Fainting, n.
 
 
 ====Translations====
-*Lithuanian: [[nualpimas]] ''m''
+*Lithuanian: [[nualpimas]] ''m'' (1); [[alpulys]] ''m'' (2)
 
 ===Adjective===
 
