/* Translations */ <nephew-in-law#57460>

--- a/wiki/nephew-in-law.wikitext
+++ b/wiki/nephew-in-law.wikitext
@@ -16,5 +16,6 @@
 
 ===Translations===
 *[[French]]: [[beau-neveu]]
+*[[German]]: [[Schwiegerneffe]]
 *[[Latin]]: [[gener fratris]] (1), [[gener sororis]] (2), [[gener fratris mariti]] or [[gener fratris uxoris]] (3), [[gener sororis mariti]] or [[gener sororis uxoris]] (4)
 *[[Spanish]]: [[sobrino político]]
