--- a/wiki/meal.wikitext
+++ b/wiki/meal.wikitext
@@ -17,5 +17,6 @@
 *French: [[repas]] ''m'' (1)
 *[[Interlingua]]: [[repasto]] (1)
 *Italian: [[pasto]] ''m'' (1)
+*Lithuanian: [[valgis]] ''m'' (1)
 *Portuguese: [[refeição]] ''f'' (1)
-*Russian: [[мука|мука́]] ''f'' (2)
+*Russian: [[еда]] ''f'' (1); [[мука|мука́]] ''f'' (2)
