--- a/wiki/useless.wikitext
+++ b/wiki/useless.wikitext
@@ -15,4 +15,5 @@
 *[[Latin]]: [[inutilis]]
 *[[Pitjantjatjara]]: [[kura]], [[uṉa]]
 *[[Polish]]: [[niepotrzebny]] ''m'', [[bezużyteczny]] ''m''
+*[[Russian]]: [[бесполезный]] ''m'', [[ненужный]] ''m''
 *[[Spanish]]: [[inútil]]
