--- a/wiki/news.wikitext
+++ b/wiki/news.wikitext
@@ -29,6 +29,7 @@ Plural of obsolete noun "new", meaning "something that is new"; not, as is somet
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[naujiena]] ''f''
 *Swedish: [[nyhet]] ''c singular'', [[nyheter]] ''c plural''
 |}
 |}
@@ -47,6 +48,7 @@ Plural of obsolete noun "new", meaning "something that is new"; not, as is somet
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[naujienos]] ''f, pl''
 *Swedish: [[nyheter]]
 |}
 |}
