--- a/wiki/resistor.wikitext
+++ b/wiki/resistor.wikitext
@@ -5,6 +5,7 @@
 
 ====Translation====
 *Chinese: [[反抗]][[者]] (1), [[電阻]] (2)
+*Dutch: [[weerstander]] ''m'' (1), [[weerstand]] ''m'' (2)
 *Finnish: [[vastus]] (2), [[resistori]] (2)
 *Lithuanian: [[pasipriešinimo narys]] ''m'' (1); [[varžas]] ''f'' (2)
 *Slovak: [[odporca]] ''m'' (1), [[odpor]] (2) ''m''
