--- a/wiki/supra.wikitext
+++ b/wiki/supra.wikitext
@@ -1,6 +1,8 @@
-
 ===Etymology===
 Latin for "[[above]]"
 
 ===Noun===
 #used in legal citations to indicate that the cite is from the same source as the previous citation.
+
+===See also===
+[[Infra]]
