--- a/wiki/condescend.wikitext
+++ b/wiki/condescend.wikitext
@@ -1,4 +1,6 @@
-1. '''To stoop or descend'''; to let one's self down; to submit; to waive the privilege of rank or dignity; to accommodate one's self to an inferior. 
+1. When people talk to you, as though you are stupid. As though you are thick as 2 planks
+Example:
+''Thats a big word, appropiate''
 Eg. a.``Condescend to men of low estate.'' --Rom. xii. 16.
 
 b.Can they think me so broken, so debased With corporal servitude, that my mind ever Will condescend to such absurd commands? --Milton.
