--- a/wiki/nigger.wikitext
+++ b/wiki/nigger.wikitext
@@ -18,7 +18,7 @@ Changing attitudes and realizations towards those of black origin (e.g., realizi
 
 # ''(normally extremely, highly, or strongly offensive, often considered vulgar, but see usage note)'' a dark-skinned person, especially a person of, or primarily of, Negro descent.
 ====Translations====
-*Slovak: [[néger]] ''m'' (1)
+*Slovak: [[négr]] ''m'' (1)
 
 ===See also===
 *[[negress]]
