--- a/wiki/slayer.wikitext
+++ b/wiki/slayer.wikitext
@@ -4,4 +4,4 @@
 
 '''slayer'''
 
-#One who slays; a killer; a murderer; a destrroyer of life.
+#One who slays; a killer; a murderer; a destroyer of life.
