--- a/wiki/newspaper.wikitext
+++ b/wiki/newspaper.wikitext
@@ -30,6 +30,7 @@
 {|
 *Hebrew: [[עיתון|עִיתּוֹן]] (I'ton) ''m''
 *Italian: [[giornale]] ''m''
+*Lithuanian: [[laikraštis]] ''m'' 
 *Persian: [[روزنامه]] (ruznameh) 
 *Polish: [[gazeta]] ''f''
 *Portuguese: [[jornal]] ''m''
@@ -53,6 +54,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[laikraštinis popierius]] ''m'' 
 *Slovak: [[novinový papier]] ''m''
 *Swedish: [[tidningspapper]] ''n''
 *[[Tagalog]]: [[dyariyo]]
