--- a/wiki/sucrose.wikitext
+++ b/wiki/sucrose.wikitext
@@ -5,5 +5,9 @@ From French [[sucre]] ("sugar"), der. of Latin [[saccharum]] + [[-ose]] (meaning
 '''sucrose'''
 #Table [[sugar]].
 #A [[disaccharide]] with formula C<sub>12</sub>H<sub>22</sub>O<sub>11</sub>, consisting of two simple sugars, [[glucose]] and [[fructose]].
+
+====Translations====
+*Lithuanian: [[sacharozė]] ''f''
+
 ===External links===
 *[[w:sucrose|Wikipedia article on Sucrose]]
