--- a/wiki/glucose.wikitext
+++ b/wiki/glucose.wikitext
@@ -4,5 +4,9 @@ From Greek [[γλυκός]]([[glykos]]) (meaning "sweet") + [[-ose]] ("full of")
 ===Noun===
 '''glucose'''
 #A simple monosaccharide [[sugar]] with the formula C<sub>6</sub>H<sub>12</sub>O<sub>6</sub> which is a principal source of energy for most living things.
+
+====Translations====
+*Lithuanian: [[gliukozė]] ''f''
+
 ====External links====
 *[[w:glucose|Wikipedia article on Glucose]]
