--- a/wiki/fructose.wikitext
+++ b/wiki/fructose.wikitext
@@ -4,5 +4,10 @@ From Latin [[fructus]] (meaning "fruit") + [[-ose]] (der. of [[sucrose]])
 ===Noun===
 '''fructose'''
 #A [[monosaccharide]] [[ketose]] [[sugar]], formula C<sub>6</sub>H<sub>12</sub>O<sub>6</sub>.
+
+
+====Translations====
+*Lithuanian: [[fruktozė]] ''f''
+
 ===External links===
 *[[w:fructose|Wikipedia article on Fructose]]
