--- a/wiki/Tokyo.wikitext
+++ b/wiki/Tokyo.wikitext
@@ -1,9 +1,11 @@
 ==English==
-
 ===Proper noun===
 '''Tokyo'''
 
 # Capital of [[Japan]].
+
+====Alternate spellings====
+*[[Tōkyō]], [[Tôkyô]]
 
 ====Synonyms====
 *[[Edo]], [[Yedo]] (''spellings of its former name'')
@@ -14,4 +16,5 @@
 *Italian: Tokyo ''f'', [[Tokio]]
 *Japanese: [[東京]] (とうきょう, T&#0333;ky&#0333;)
 *Spanish: [[Tokio]], (''rare'') Tokyo
+
 [[la:Tokyo]]
