/* [[adjective]] */ <a hundred and ten percent#4387>

--- a/wiki/a_hundred_and_ten_percent.wikitext
+++ b/wiki/a_hundred_and_ten_percent.wikitext
@@ -1,3 +1,4 @@
 == [[adjective]] ==
 #''Slang'' in American sports meaning ''putting forth the extra effort needed'', ''giving it all you've got and then some''.
 #:''"We busted our tails and won, we gave 110%"''.
+A commonly used slang, meaning to exert more than seems possible, hence 110%, not 100%, the usual maximum amount possible.
