fmt; remove inline interwiki <sacker#56824>

--- a/wiki/sacker.wikitext
+++ b/wiki/sacker.wikitext
@@ -1,13 +1,8 @@
-=English=
-==Etymology==
-==Noun==
+==English==
+===Noun===
 '''sacker'''
 
-# someone that [[plunder|plunders]] a [[village]]
+# someone that [[plunder]]s a [[village]]
 
-===Synonyms===
-
-===See also===
-
-===Translations===
-*German: [[Plünderer]] [[:de:Plünderer|^]] ''m''
+====Translations====
+*German: [[Plünderer]] ''m''
