fmt; but why the 2 kinds of macros, with and without the hyphens?? <阿尔巴尼亚人#48384>

--- a/wiki/%E9%98%BF%E5%B0%94%E5%B7%B4%E5%B0%BC%E4%BA%9A%E4%BA%BA.wikitext
+++ b/wiki/%E9%98%BF%E5%B0%94%E5%B7%B4%E5%B0%BC%E4%BA%9A%E4%BA%BA.wikitext
@@ -1,4 +1,5 @@
 {{-zh-}}
-
 {{-noun-}}
-#'''阿尔巴尼亚人''' - [[Albanian]]; a person from Albania or of Albanian descent.
+'''[[阿尔巴尼亚]][[人]]'''
+
+# [[Albanian]]; a person from Albania or of Albanian descent.
