--- a/wiki/grain_of_salt.wikitext
+++ b/wiki/grain_of_salt.wikitext
@@ -6,6 +6,6 @@ A sort of [[proverb]], the Latin expression indicated that in everything we shou
 
 '''To take''' something '''with a grain of salt''' now means to accept it less than fully.  The [[Oxford English Dictionary]] dates this usage back to 1647.
 
-====Translations===
+====Translations====
 *Dutch: [[korrel]]tje [[zout]] (iets met een korreltje zout nemen)
 *Swedish: [[en nypa salt]]
