--- a/wiki/abscond.wikitext
+++ b/wiki/abscond.wikitext
@@ -1,15 +1,20 @@
+==English==
 ===Etymology===
-Latin ''abscondere'' to hide; ''ab'', ''abs'' + ''condere'' to lay up; ''con'' + ''d&#259re'' (only in compounds) to put. Cf. [[Do]]
-===Intransitive verb===
-imperfect and past participle: [[Absconded]]; <br>
-present participle and verbal noun: [[Absconding]]
+Latin ''abscondere'' to hide; ''ab'', ''abs'' + ''condere'' to lay up; ''con'' + ''d&#259;re'' (only in compounds) to put. Cf. [[Do]]
+
+===Verb===
+'''to abscond''' ([[absconds]], [[absconded]], [[absconding]])
+
+====Intransitive====
 #To hide, withdraw, or be concealed.
 #:'''Quotations'''
 #:*The marmot ''absconds'' all winter. - [[Ray]]
 #To depart [[clandestinely]]; to [[steal]] off and [[secrete]] one's self; -- used especially of persons who withdraw to avoid a legal process; as, an ''absconding'' [[debtor]].
 #:'''Quotations'''
 #:*That very homesickness which, in regular armies, drives so many recruits to ''abscond''. - [[Macaulay]]
-===Transitive verb=== 
+
+====Transitive====
 #To hide; to conceal. [Obsolete] - [[Bentley]]
-===Translations==
-*[[Norwegian]]: [[rømme]], [[stikke av]]
+
+=====Translations=====
+*Norwegian: [[rømme]], [[stikke av]]
