/* English */ fmt <titan#32122>

--- a/wiki/titan.wikitext
+++ b/wiki/titan.wikitext
@@ -1,9 +1,10 @@
 ==English==
-===Pronounciation====
+===Pronounciation===
 [[Hyphenation]]: ti&middot;tan
 
 ===Noun===
 '''titan''' (''plural'' '''titans''')
+
 #Something of very large [[stature]], [[greatness]], or [[godliness]].
 ====Translations====
 {| border=0  width=100%
@@ -21,6 +22,7 @@
 
 ===Proper noun===
 '''Titan''' (''plural'' '''Titans''')
+
 #One of the [[giant]]s in [[Greek]] [[mythology]] who preceded the [[Olympian]] [[god]]s.
 #The largest [[moon]] of the [[planet]] [[Saturn]].
 
@@ -59,6 +61,7 @@
 *[[titanium]]
 
 ----
+
 ==German==
 ===Noun===
 '''Titan''' ''n''
