--- a/wiki/Capricornus.wikitext
+++ b/wiki/Capricornus.wikitext
@@ -1,7 +1,8 @@
 ==Latin==
-===Proper Noun===
+===Proper noun===
 '''Capricornus''' ''m'' (Plural: [[Capricorni]])
 
 #[[Capricorn]]
-====Related Words===
+
+===Related terms===
 :[[caper]], [[cornu]]
