--- a/wiki/tiec%C5%A5.wikitext
+++ b/wiki/tiec%C5%A5.wikitext
@@ -1,11 +1,14 @@
 == Slovak ==
 === Verb ===
 '''tiecť''' ''inf''
+
 # to [[flow]]
-==== Singular ===
+
+==== Singular ====
 : '''tečiem''' ''I flow''
 : '''tečieš''' ''you flow''
 : '''tečie''' ''he/she/it flows''
+
 ==== Plural ====
 : '''tečieme''' '' we flow''
 : '''tečiete''' ''you flow''
