--- a/wiki/walk.wikitext
+++ b/wiki/walk.wikitext
@@ -262,7 +262,7 @@ The translations below need to be checked by native speakers and inserted into t
 *Danish: [[gåtur]] (1); [[gang]] (2); [[fodsti]] (3)
 *Dutch: [[wandeling]] (1), [[loopje]] (2), [[pad]] (3)
 *Finnish: [[kävely]] (1, 2), [[kävelyretki]] (1), [[kävelyalue]] (3), [[kävelykatu]] (3)
-*Hebrew: [[ ]] (halicha)
+*Hebrew: (halicha)
 *Latin: [[ambulatio]] (1, 3)
 *Spanish: [[paseo]] (1)
 *Vietnamese: [[Đường|đường]] [[Đi|đi]] (1, 3), [[cách]] [[bước]] đi (2)
