/* Translations */ remove empty brackets from greek translation <septillion#33936>

--- a/wiki/septillion.wikitext
+++ b/wiki/septillion.wikitext
@@ -17,7 +17,7 @@ sep-TIL-li-on
 
 ====Translations====
 *Estonian: [[septiljon]]
-*Greek: [[ ]] (heptaekatommyria)
+*Greek: (heptaekatommyria)
 *Latin: [[septillio]], [[septillionis]]
 
 [[Category:English cardinal numbers]]
