--- a/wiki/bosom.wikitext
+++ b/wiki/bosom.wikitext
@@ -1,7 +1,6 @@
-=English=
-
-==Noun==
-'''bosom (bosoms)'''
+==English==
+===Noun===
+'''bosom''' ([[bosoms]])
 
 # [[chest]], [[breast]]; the [[pectoral]] [[muscle]]s and [[mammae]] of the human, especially the [[female]] human.
 #:''In the book '''The Scarlet Letter''', the [[protagonist]] wears a red "A" on her chest, giving the author the excuse to mention her bosom 66 times.''
@@ -11,15 +10,15 @@
 *Considered a polite way to refer to a woman's breasts.
 *Means the chest collectively and cannot be used to refer to a single breast.
 
-'''Translations'''
+====Translations====
 *German: der [[Busen]] ''n''
 *Slovene: [[prsi]] ''f pl'', [[prsa]] ''n pl'' (colloq.), [[nedra]] ''n pl'' (liter.)
 
-==Adjective==
+=====Adjective=====
 ''bosom'' (no [[comparative]] or [[superlative]] form)
 
 # Describes a very [[close]] [[relationship]].
 #: ''bosom [[buddy|buddies]]''
 
-'''Translations'''
+====Translations====
 *German: [[bosom]] [[buddy]]: der [[Busenfreund]] ''n''
