fmt; +rel <globular#50256>

--- a/wiki/globular.wikitext
+++ b/wiki/globular.wikitext
@@ -1,3 +1,9 @@
-=Globular=
+==Globular==
 ===Adjective===
-Roughly [[spherical]] in shape
+'''globular'''
+
+# Roughly [[spherical]] in shape
+
+====Related terms====
+*[[glob]]
+*[[globule]]
