folk etymology -> popular etymology <rule of thumb#472030>

--- a/wiki/rule_of_thumb.wikitext
+++ b/wiki/rule_of_thumb.wikitext
@@ -4,7 +4,7 @@ The term "'''rule of thumb'''" or similar exists in many languages and cultures.
 
 It is often claimed that the term originally referred to the maximum size of a stick with which it was permissible for a man to beat his wife. This claim has been debunked, for instance by [[Christina Hoff Sommers]] in her book ''[[Who Stole Feminism?]]'' ([[1994]] ISBN 0684801566).  In particular Sommers notes that there is no mention of this in the legal commentaries of [[ William Blackstone]]. 
 
-The [[folk etymology]] of the expression or its [[urban legend]] may have received a boost in the following quote from [[Del Martin]] of the [[National Organization for Women]]:
+The [[fake etymology|popular etymology]] of the expression or its [[urban legend]] may have received a boost in the following quote from [[Del Martin]] of the [[National Organization for Women]]:
  
 :"In America, early settlers held European attitudes towards women.  Our law, based upon the old English common-law doctrines, explicitly permitted wife-beating for correctional purposes.  However, certain restrictions did exist and the general trend in the young states was toward declaring wife-beating illegal.  For instance, the common-law doctrine had been modified to allow the husband 'the right to whip his wife provided that he used a switch no bigger than his thumb' -- a rule of thumb, so to speak"
 :::&mdash;Del Martin, ''Battered Wives'' Volcano Press, 1976, page 31.
