--- a/wiki/biphasic.wikitext
+++ b/wiki/biphasic.wikitext
@@ -4,13 +4,13 @@
 
 '''biphasic'''
 
-# Having two phases.
+# Having two [[phase]]s.
 
 ===Noun===
 
 '''biphasic note'''
 
-# A sung tone where sound is produced during exhalation and inhalation, that is, during both of two phases. "Alternate production of exhalation and inhalation sounds." (Wallin, Merker, and Brown, 2000)
+# A sung tone where [[sound]] is produced during exhalation and inhalation, that is, during both of two phases. "Alternate production of [[exhalation]] and [[inhalation]] sounds." (Wallin, Merker, and Brown, 2000)
 
 ==Source==
 *Wallin, Merker, and Brown, eds. (2000). "An Introduction to Evolutionary Musicology", ''The Origins of Music''. ISBN 0262232065.
