--- a/wiki/triptych.wikitext
+++ b/wiki/triptych.wikitext
@@ -1,3 +1,3 @@
 =={{En}}==
 ===Noun===
-# A [[picture]] or series of [[picture]]s painted on three [[tablet]]s connected by [[hinge]]s. See ''[[Diptych]]''.
+# A [[picture]] or series of pictures painted on three [[tablet]]s connected by [[hinge]]s. See ''[[Diptych]]''.
