[[Category:English slang]] <frag#47396>

--- a/wiki/frag.wikitext
+++ b/wiki/frag.wikitext
@@ -1,5 +1,5 @@
 =={{en}}==
-[[Category:English language]]
+[[Category:English slang]]
 ===Etymology===
 From U.S. military slang in the Vietnam War, frag commonly meant to kill an unpopular member of one's own unit by dropping a fragmentation grenade in their tent. It was popularised as a gaming term by the [[first-person]] shooter computer games Doom and Quake and Unreal Tournament.
 
