--- a/wiki/dire.wikitext
+++ b/wiki/dire.wikitext
@@ -4,7 +4,13 @@ From Latin [[dirus]].
 ===Adjective===
 '''dire'''
 
-#[[dreadful]]
+# Ill-boding; [[portentous]]; as, ''dire'' [[omen]]s.
+# [[Evil]] in great degree; [[dreadful]]; [[dismal]]; [[horrible]]; [[terrible]]; [[lamentable]].
+
+===Quotes===
+* ''''''Dire''' was the tossing, deep the groans''. [[John Milton]]
+* ''Gorgons and hydras and chimeras '''dire'''''. [[John Milton]]
+
 ===Related Terms===
 *[[dire wolf]]
 ----
