--- a/wiki/dire.wikitext
+++ b/wiki/dire.wikitext
@@ -8,7 +8,7 @@ From Latin [[dirus]].
 # [[Evil]] in great degree; [[dreadful]]; [[dismal]]; [[horrible]]; [[terrible]]; [[lamentable]].
 
 ===Quotes===
-* ''''''Dire''' was the tossing, deep the groans''. [[John Milton]]
+* '''''Dire''' was the tossing, deep the groans''. [[John Milton]]
 * ''Gorgons and hydras and chimeras '''dire'''''. [[John Milton]]
 
 ===Related Terms===
