--- a/wiki/dittohead.wikitext
+++ b/wiki/dittohead.wikitext
@@ -1,5 +1,5 @@
 =={{en}}==
-[[Category:English language]]
+[[Category:English slang]]
 ===Etymology===
 Coined by listeners of Rush Limbaugh's radio show, from the habit of calling in with the single-word comment "Ditto!".
 
