--- a/wiki/aeon.wikitext
+++ b/wiki/aeon.wikitext
@@ -1,3 +1,12 @@
 A very long period of time. [See eon]
 
 "When Earth's last picture is painted,
+    and the tubes are twisted and dried,
+When the oldest colors have faded,
+    and the youngest critic has died,
+We shall rest, and, faith, we shall need
+   it -- lie down for an aeon or two,
+Till the Master of All Good Workmen
+   shall put us to work anew."
+
+Kipling, "When Earth's Last Picture is Painted"
