[[Category:English slang]] <confuzzle#58247>

--- a/wiki/confuzzle.wikitext
+++ b/wiki/confuzzle.wikitext
@@ -1,5 +1,5 @@
 =={{en}}==
-[[Category:English language]]
+[[Category:English slang]]
 ===Etymology===
 Alteration of [[confuse]], probably influenced by [[fuzzy]].
 ===Verb===
