[[Category:English slang]] <comp#59029>

--- a/wiki/comp.wikitext
+++ b/wiki/comp.wikitext
@@ -1,5 +1,4 @@
 =={{en}}==
-[[Category:English language]]
 ===Etymology===
 Shortening of [[computer|comp(uter)]]
 ===Noun===
@@ -9,3 +8,5 @@ Shortening of [[computer|comp(uter)]]
 ===Synonyms===
 *[[compy]]
 *[[puter]]
+
+[[Category:English slang]]
