--- a/wiki/dire.wikitext
+++ b/wiki/dire.wikitext
@@ -6,8 +6,8 @@ From Latin [[dirus]].
 # [[Evil]] in great degree; [[dreadful]]; [[dismal]]; [[horrible]]; [[terrible]]; [[lamentable]].
 
 ===Quotes===
-* '''''Dire''' was the tossing, deep the groans''. [[John Milton]]
-* ''Gorgons and hydras and chimeras '''dire'''''. [[John Milton]]
+* '''''Dire''' was the tossing, deep the groans'' [[John Milton]] ''Paradise Lost'' line 9858.
+* ''Gorgons and hydras and chimeras '''dire'''''. [[John Milton]] ''Paradise Lost'' line 1464.
 
 ===Related Terms===
 *[[dire wolf]]
