[[Category:English slang]] <ish#43541>

--- a/wiki/ish.wikitext
+++ b/wiki/ish.wikitext
@@ -1,5 +1,4 @@
 =={{en}}==
-[[Category:English language]]
 ===Etymology===
 From the suffix ''[[-ish]]''.
 ===Adverb===
@@ -23,3 +22,5 @@ From the suffix ''[[-ish]]''.
 
 ====Usage note====
 *This is often used as a [[euphemism]] for a bad state.
+
+[[Category:English slang]]
