[[Category:English slang]] <bizarro#47591>

--- a/wiki/bizarro.wikitext
+++ b/wiki/bizarro.wikitext
@@ -1,5 +1,4 @@
 =={{en}}==
-[[Category:English language]]
 ===Etymology===
 From the Superman villian [[w:Bizarro|Bizarro]]
 
@@ -12,3 +11,5 @@ From the Superman villian [[w:Bizarro|Bizarro]]
 '''bizarro''' ''m'' (f: [[bizarra]])
 
 # [[dashing]], [[spirited]], [[gallant]], [[generous]]
+
+[[Category:English slang]]
