--- a/wiki/alienate.wikitext
+++ b/wiki/alienate.wikitext
@@ -4,7 +4,7 @@ a.
 [L. [[alienatus]], p. p. of [[alienare]], fr. [[alienus]]. See [[Alien]], and cf. [[Aliene]].] 
 Estranged; withdrawn in affection; foreign; with ''from''. 
 ===Quotation===
-O '''alienate from''' God. Milton.
+''O '''alienate from''' God''. [[John Milton]]. ''Paradise Lost'' line 4643.
 
 ==Verb==
 v. t. [imp. & p. p. [[Alienated]]; p. pr. & vb. n. [[Alienating]].] 
