--- a/wiki/amyloid.wikitext
+++ b/wiki/amyloid.wikitext
@@ -7,3 +7,5 @@ From Greek [[amylon]] meaning "starch."
 ===Adjective===
 '''amyloid'''
 #Containing or resembling amyloid.
+===External links===
+*[[w:amyloid|Wikipedia article on amyloid]]
