--- a/wiki/labyrinthine.wikitext
+++ b/wiki/labyrinthine.wikitext
@@ -3,3 +3,5 @@
 '''labyrinthine'''
 
 #resembling a [[labyrinth]]
+
+"Mamet, like one of his characters, invents a labyrinthine, convoluted spiel leading nowhere, and like a magician distracts us with his words while elaborately not producing a rabbit from his hat." - Roger Ebert
