--- a/wiki/UT.wikitext
+++ b/wiki/UT.wikitext
@@ -6,7 +6,15 @@ The first word (the Latin '''ut''': see below) of the first line of a section of
 '''ut'''
 
 # syllable formerly used in [[sol-fa]] to represent the first note of a [[major scale]].  '''Ut''' has been replaced by ''[[do]]''.
+----
 
+==French==
+===Noun===
+'''ut''' ''m''
+
+#(''musical note'') ut, [[do]]
+
+----
 ==Latin==
 ===Conjunction===
 '''ut'''
