--- a/wiki/UT.wikitext
+++ b/wiki/UT.wikitext
@@ -20,7 +20,7 @@ The first word (the Latin '''ut''': see below) of the first line of a section of
 '''ut'''
 
 # [[that]], [[so that]], in order to, in order that
-#: "Spero ut pacem habeant semper." - '''"I hope that they may always have peace."'''
+#: "Spero ut pacem habeant semper." - ''"I hope that they may always have peace."''
 
 ===Related terms===
 *[[ne]]
