--- a/wiki/queue.wikitext
+++ b/wiki/queue.wikitext
@@ -37,3 +37,12 @@
 *[[first-in first-out]]
 *[[queueing theory]]
 *[[queue up]]
+
+----
+
+==French==
+===Noun===
+'''queue''' ''f''
+# [[tail]]
+# queue, [[line]]
+[[ja:queue]]
