--- a/wiki/luce.wikitext
+++ b/wiki/luce.wikitext
@@ -3,3 +3,4 @@
 '''luce''' ''f'' (''plural'' '''luci''')
 
 #[[light]] (''visible electromagnetic wave; electrical device providing light'')
+[[ja:luce]]
