Spanish tran. <stain#47406>

--- a/wiki/stain.wikitext
+++ b/wiki/stain.wikitext
@@ -3,7 +3,10 @@
 
 ====Translations====
 *Chinese Characters: [[垢]] (gòu)
-*Latin: [[maculare]]
 
 ===Verb===
 '''to stain''' ([[stains]], [[stained]], [[staining]])
+
+====Translations====
+*Latin: [[maculare]]
+*Spanish: [[manchar]]
