--- a/wiki/lingua.wikitext
+++ b/wiki/lingua.wikitext
@@ -1,3 +1,16 @@
+==Italian==
+===Noun===
+'''lingua''' ''f'' (Plural: [[lingue]])
+
+#a [[tongue]]
+#a [[language]]
+
+===Related terms===
+*[[linguaggio]]
+*[[linguetta]]
+*[[linguistica]]
+
+----
 ==Latin==
 ===Noun===
 '''lingua''' ''f'' (Plural: [[linguae]])
@@ -13,3 +26,4 @@
 
 #a [[tongue]]
 #a [[language]]
+[[ja:lingua]]
