/* Verb */ one def <stain#47406>

--- a/wiki/stain.wikitext
+++ b/wiki/stain.wikitext
@@ -6,6 +6,7 @@
 
 ===Verb===
 '''to stain''' ([[stains]], [[stained]], [[staining]])
+# To change the original color.
 
 ====Translations====
 *Latin: [[maculare]]
