--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -4,3 +4,12 @@ First principal part: macul&#333; : ''I stain'' <br>
 Second principal part: macul&#257;re : ''to stain'' <br>
 Third principal part: macul&#257;v&#299; : ''I stained'' <br>
 Fourth principal part: macul&#257;tum : ''having been stained'' <br>
+
+<u>''Present''</u> <br>
+macul&#333; : ''I stain'' <br>
+macul&#257;s : ''you stain'' <br>
+maculat : ''he/she/it stains'' <br>
+:&mdash; <br>
+macul&#257;mus : ''we stain'' <br>
+macul&#257;tis : ''you (all) stain'' <br>
+maculant : ''they stain'' <br>
