--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -1,9 +1,12 @@
 '''(macul&#333;, macul&#257;re, macul&#257;v&#299;, macul&#257;tum)'''
 
+Latin regular verb of the first conjugation.
+
 First principal part: macul&#333; : ''I stain'' <br>
 Second principal part: macul&#257;re : ''to stain'' <br>
 Third principal part: macul&#257;v&#299; : ''I stained'' <br>
 Fourth principal part: macul&#257;tum : ''having been stained'' <br>
+
 
 <u>''Present''</u> <br>
 macul&#333; : ''I stain'' <br>
@@ -13,3 +16,29 @@ maculat : ''he/she/it stains'' <br>
 macul&#257;mus : ''we stain'' <br>
 macul&#257;tis : ''you (all) stain'' <br>
 maculant : ''they stain'' <br>
+
+
+<u> ''Future'' </u> <br>
+macul&#257;b&#333; : ''I will stain'' <br>
+macul&#257;bis : ''you will stain'' <br>
+macul&#257;bit : ''he/she/it will stain'' <br>
+:&mdash; <br>
+macul&#257;bimus : ''we will stain'' <br>
+macul&#257;bitis : ''you (all) will stain'' <br>
+macul&#257;bunt : ''they will stain <br>
+
+
+<u> ''Imperative'' </u> <br>
+macul&#257; <br>
+:&mdash; <br>
+macul&#257;te <br>
+
+
+<u> ''Imperfect'' </u> <br>
+macul&#257;bam : ''I was staining'' <br>
+macul&#257;b&#257;s : ''you were staining'' <br>
+macul&#257;bat : ''he/she/it was staining'' <br>
+:&mdash; <br>
+macul&#257;b&#257;mus : ''we were staining'' <br>
+macul&#257;b&#257;tis : ''you (all) were staining'' <br>
+macul&#257;bant : ''they were staining'' <br>
