--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -42,3 +42,13 @@ macul&#257;bat : ''he/she/it was staining'' <br>
 macul&#257;b&#257;mus : ''we were staining'' <br>
 macul&#257;b&#257;tis : ''you (all) were staining'' <br>
 macul&#257;bant : ''they were staining'' <br>
+
+
+<u> ''Perfect'' </u> <br>
+macul&#257;v&#299; : ''I stained'' <br>
+macul&#257;vist&#299; : ''you stained'' <br>
+macul&#257;vit : ''he/she/it stained'' <br>
+:&mdash;
+macul&#257;vimus; : ''we stained'' <br>
+macul&#257;vistis : ''you (all) stained'' <br>
+macul&#257;v&#275;runt : ''they stained'' <br>
