Future Perfect. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -29,9 +29,9 @@ macul&#257;bunt : ''they will stain <br>
 
 
 <u> ''Imperative'' </u> <br>
-macul&#257; <br>
+(t&#363;) macul&#257; <br>
 :&mdash; <br>
-macul&#257;te <br>
+(v&#333;s) macul&#257;te <br>
 
 
 <u> ''Imperfect'' </u> <br>
@@ -52,3 +52,13 @@ macul&#257;vit : ''he/she/it stained'' <br>
 macul&#257;vimus; : ''we stained'' <br>
 macul&#257;vistis : ''you (all) stained'' <br>
 macul&#257;v&#275;runt : ''they stained'' <br>
+
+
+<u> ''Future Perfect'' </u> <br>
+macul&#257;ver&#333; : ''I will have stained'' <br>
+macul&#257;veris : ''you will have stained'' <br>
+macul&#257;verit : ''he/she/it will have stained'' <br>
+:&mdash;
+macul&#257;verimus : ''we will have stained'' <br>
+macul&#257;veritis : ''you (all) will have stained'' <br>
+macul&#257;verint : ''they will have stained'' <br>
