--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -48,7 +48,7 @@ macul&#257;bant : ''they were staining'' <br>
 macul&#257;v&#299; : ''I stained'' <br>
 macul&#257;vist&#299; : ''you stained'' <br>
 macul&#257;vit : ''he/she/it stained'' <br>
-:&mdash;
+:&mdash; <br>
 macul&#257;vimus; : ''we stained'' <br>
 macul&#257;vistis : ''you (all) stained'' <br>
 macul&#257;v&#275;runt : ''they stained'' <br>
@@ -58,7 +58,17 @@ macul&#257;v&#275;runt : ''they stained'' <br>
 macul&#257;ver&#333; : ''I will have stained'' <br>
 macul&#257;veris : ''you will have stained'' <br>
 macul&#257;verit : ''he/she/it will have stained'' <br>
-:&mdash;
+:&mdash; <br>
 macul&#257;verimus : ''we will have stained'' <br>
 macul&#257;veritis : ''you (all) will have stained'' <br>
 macul&#257;verint : ''they will have stained'' <br>
+
+
+<u> ''Pluperfect'' </u> <br>
+macul&#257;veram : ''I had been staining'' <br>
+macul&#257;ver&#257;s : ''you had been staining'' <br>
+macul&#257;verat : ''he/she/it had been staining'' <br>
+:&mdash; <br>
+macul&#257;ver&#257;mus : ''we had been staining'' <br>
+macul&#257;ver&#257;tis : ''you (all) had been staining'' <br>
+macul&#257;verant : ''they had been staining'' <br>
