Present Passive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -72,3 +72,13 @@ macul&#257;verat : ''he/she/it had been staining'' <br>
 macul&#257;ver&#257;mus : ''we had been staining'' <br>
 macul&#257;ver&#257;tis : ''you (all) had been staining'' <br>
 macul&#257;verant : ''they had been staining'' <br>
+
+
+<u> ''Present Passive'' </u> <br>
+maculor : ''I am being stained'' <br>
+macul&#257;ris : ''you are being stained'' <br>
+macul&#257;tur : ''he/she/it is being stained'' <br>
+:&mdash; <br>
+macul&#257;mur : ''we are being stained'' <br>
+macul&#257;min&#299; : ''you (all) are being stained'' <br>
+maculantur : ''they are being stained'' <br>
