--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -82,3 +82,13 @@ macul&#257;tur : ''he/she/it is being stained'' <br>
 macul&#257;mur : ''we are being stained'' <br>
 macul&#257;min&#299; : ''you (all) are being stained'' <br>
 maculantur : ''they are being stained'' <br>
+
+
+<u> ''Future Passive'' </u> <br>
+macul&#257;bor : ''I will be stained'' <br>
+macul&#257;beris : ''you will be stained'' <br>
+macul&#257;bitur : ''he/she/it will be stained'' <br>
+:&mdash; <br>
+macul&#257;bimur : ''we will be stained'' <br>
+macul&#257;bimin&#299; : ''you (all) will be stained'' <br>
+macul&#257;buntur : ''they will be stained'' <br>
