Imperfect Passive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -92,3 +92,13 @@ macul&#257;bitur : ''he/she/it will be stained'' <br>
 macul&#257;bimur : ''we will be stained'' <br>
 macul&#257;bimin&#299; : ''you (all) will be stained'' <br>
 macul&#257;buntur : ''they will be stained'' <br>
+
+
+<u> ''Imperfect Passive'' </u> <br>
+macul&#257;bar : ''I was being stained'' <br>
+macul&#257;b&#257;ris : ''you were being stained'' <br>
+macul&#257;b&#257;tur : ''he/she/it was being stained'' <br>
+:&mdash; <br>
+macul&#257;b&#257;mur : ''we were being stained'' <br>
+macul&#257;b&#257;min&#299; : ''you (all) were being stained'' <br>
+macul&#257;bantur : ''they were being stained'' <br>
