--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -102,3 +102,13 @@ macul&#257;b&#257;tur : ''he/she/it was being stained'' <br>
 macul&#257;b&#257;mur : ''we were being stained'' <br>
 macul&#257;b&#257;min&#299; : ''you (all) were being stained'' <br>
 macul&#257;bantur : ''they were being stained'' <br>
+
+
+<u> ''Perfect Passive'' </u> <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum sum : ''I have been stained'' <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum es : ''you have been stained'' <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum est : ''he/she/it has been stained'' <br>
+:&mdash; <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta sumus : ''we have been stained'' <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta estis : ''you (all) have been stained'' <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta sunt : ''they have been stained'' <br>
