Future Perfect Passive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -112,3 +112,13 @@ macul&#257;tus/macul&#257;ta/macul&#257;tum est : ''he/she/it has been stained''
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta sumus : ''we have been stained'' <br>
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta estis : ''you (all) have been stained'' <br>
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta sunt : ''they have been stained'' <br>
+
+
+<u> ''Future Perfect Passive'' </u> <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum er&#333; : ''I will have been stained'' <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum eris : ''you will have been stained'' <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum erit : ''he/she/it will have been stained'' <br>
+:&mdash; <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta erimus : ''we will have been stained'' <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta eritis : ''you (all) will have been stained'' <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta erunt : ''they will have been stained'' <br>
