/* Translation */ formatting, +fi <herbicide#42566>

--- a/wiki/herbicide.wikitext
+++ b/wiki/herbicide.wikitext
@@ -9,15 +9,28 @@
 *[[herbicidal]]
 
 ====Translation====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Chinese: [[除草藥]], [[除草药]]
+*Finnish: [[kasvimyrkky]]
 *French: herbicide ''m''
 *German: [[Herbizid]] ''n''
 *Greek: [[ζιζανιοκτόνο]] ''n''
 *Italian: [[diserbante]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[除草剤]]
 *Korean: [[제초제]]
 *Russian: [[гербицид]] ''m'' (gerbitsid)
 *Spanish: [[herbicida]] ''m''
+|}
+|}
 
 ----
 
