Pluperfect Passive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -122,3 +122,13 @@ macul&#257;tus/macul&#257;ta/macul&#257;tum erit : ''he/she/it will have been st
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta erimus : ''we will have been stained'' <br>
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta eritis : ''you (all) will have been stained'' <br>
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta erunt : ''they will have been stained'' <br>
+
+
+<u> ''Pluperfect Passive'' </u> <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum eram : ''I had been stained'' <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum er&#257;s : ''you had been stained'' <br>
+macul&#257;tus/macul&#257;ta/macul&#257;tum erat : ''he/she/it had been stained'' <br>
+:&mdash; <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta er&#257;mus : ''we had been stained'' <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta er&#257;tis : ''you (all) had been stained'' <br>
+macul&#257;t&#299;/macul&#257;tae/macul&#257;ta erant : ''they had  been stained'' <br>
