Present Subjunctive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -132,3 +132,13 @@ macul&#257;tus/macul&#257;ta/macul&#257;tum erat : ''he/she/it had been stained'
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta er&#257;mus : ''we had been stained'' <br>
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta er&#257;tis : ''you (all) had been stained'' <br>
 macul&#257;t&#299;/macul&#257;tae/macul&#257;ta erant : ''they had  been stained'' <br>
+
+
+<u> ''Present Subjunctive'' </u> <br>
+maculem : ''I may stain'' <br>
+macul&#275;s : ''you may stain'' <br>
+maculet : ''he/she/it may stain'' <br>
+:&mdash; <br>
+macul&#275;mus : ''we may stain'' <br>
+macul&#275;tis : ''you (all) may stain'' <br>
+maculent : ''they may stain'' <br>
