Present Subjunctive Passive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -142,3 +142,13 @@ maculet : ''he/she/it may stain'' <br>
 macul&#275;mus : ''we may stain'' <br>
 macul&#275;tis : ''you (all) may stain'' <br>
 maculent : ''they may stain'' <br>
+
+
+<u> ''Present Subjunctive Passive'' </u> <br>
+maculer : ''I may be stained'' <br>
+macul&#275;ris : ''you may be stained'' <br>
+macul&#275;tur : ''he/she/it may be stained'' <br>
+:&mdash; <br>
+macul&#275;mur : ''we may be stained'' <br>
+macul&#275;min&#299; : ''you (all) may be stained'' <br>
+maculentur : ''they may be stained'' <br>
