--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -152,3 +152,13 @@ macul&#275;tur : ''he/she/it may be stained'' <br>
 macul&#275;mur : ''we may be stained'' <br>
 macul&#275;min&#299; : ''you (all) may be stained'' <br>
 maculentur : ''they may be stained'' <br>
+
+
+<u> ''Imperfect Subjunctive'' </u> <br>
+macul&#257;rem : ''maybe I stained'' <br>
+macul&#257;r&#275;s : ''maybe you stained'' <br>
+macul&#257;ret : ''maybe he/she/it stained'' <br>
+:&mdash; <br>
+macul&#257;r&#275;mus : ''maybe we stained'' <br>
+macul&#257;r&#275;tis : ''maybe you (all) stained'' <br>
+macul&#257;rent : ''maybe they stained'' <br>
