Imperfect Subjunctive Passive. <maculare#64125>

--- a/wiki/maculare.wikitext
+++ b/wiki/maculare.wikitext
@@ -155,10 +155,20 @@ maculentur : ''they may be stained'' <br>
 
 
 <u> ''Imperfect Subjunctive'' </u> <br>
-macul&#257;rem : ''maybe I stained'' <br>
-macul&#257;r&#275;s : ''maybe you stained'' <br>
-macul&#257;ret : ''maybe he/she/it stained'' <br>
+macul&#257;rem : ''maybe I was staining'' <br>
+macul&#257;r&#275;s : ''maybe you were staining'' <br>
+macul&#257;ret : ''maybe he/she/it was staining'' <br>
 :&mdash; <br>
-macul&#257;r&#275;mus : ''maybe we stained'' <br>
-macul&#257;r&#275;tis : ''maybe you (all) stained'' <br>
-macul&#257;rent : ''maybe they stained'' <br>
+macul&#257;r&#275;mus : ''maybe we were staining'' <br>
+macul&#257;r&#275;tis : ''maybe you (all) were staining'' <br>
+macul&#257;rent : ''maybe they were staining'' <br>
+
+
+<u> ''Imperfect Subjunctive Passive'' </u> <br>
+macul&#257;rer : ''maybe I was being stained'' <br>
+macul&#257;r&#275;ris : ''maybe you were being stained'' <br>
+macul&#257;r&#275;tur : ''maybe he/she/it was being stained'' <br>
+:&mdash; <br>
+macul&#257;r&#275;mur : ''maybe we were being stained'' <br>
+macul&#257;r&#275;min&#299; : ''maybe you (all) were being stained'' <br>
+macul&#257;rentur : ''maybe they were being stained'' <br>
