--- a/wiki/%E3%81%99.wikitext
+++ b/wiki/%E3%81%99.wikitext
@@ -14,3 +14,12 @@ For a list of words starting with this hiragana see: [[Wiktionary:Japanese index
 '''す''' ([[為]], su)
 
 # (''old form of [[する]]'') [[do]]
+
+===Suffix===
+
+# representing [[bird]]s.
+
+===Related terms===
+*[[うぐいす]]
+*[[からす]]
+*[[ほととぎす]]
