--- a/wiki/%E3%81%99.wikitext
+++ b/wiki/%E3%81%99.wikitext
@@ -19,7 +19,7 @@ For a list of words starting with this hiragana see: [[Wiktionary:Japanese index
 
 # representing [[bird]]s.
 
-===Related terms===
+====Related terms====
 *[[うぐいす]]
 *[[からす]]
 *[[ほととぎす]]
