--- a/wiki/%E3%82%B0%E3%82%B0%E3%82%8B.wikitext
+++ b/wiki/%E3%82%B0%E3%82%B0%E3%82%8B.wikitext
@@ -2,7 +2,7 @@
 ===Verb===
 '''グーぐる''' (gūguru)
 
-# to [[google]], to search the Internet using the [[Google]] search engine.
+#(''rare'') to [[google]], to search the Internet using the [[Google]] search engine.
 
 ====Alternative spellings====
 *[[ググる]] (guguru, the most common word)
