--- a/wiki/%E3%82%AA%E3%82%BF%E3%82%AF.wikitext
+++ b/wiki/%E3%82%AA%E3%82%BF%E3%82%AF.wikitext
@@ -1,8 +1,8 @@
 ==Japanese==
 '''オタク''' (otaku)
 
+#[[geek]], [[nerd]]
+
 ====Alternative spellings====
 *[[おたく]]
-
-====Translations====
-*English: [[geek]], [[nerd]]
+*[[ヲタク]]
