--- a/wiki/barmy.wikitext
+++ b/wiki/barmy.wikitext
@@ -1,3 +1,8 @@
-barmy. Dotty, goofy, wacko. 
+==English==
 
+===Noun===
+
+'''Barmy'''
+
+# Dotty, goofy, wacko. 
 "The movie is sweet enough in its barmy way..." - Roger Ebert
