--- a/wiki/ignorance.wikitext
+++ b/wiki/ignorance.wikitext
@@ -1,2 +1,7 @@
-Ig-no-rance: ''n.''
-The condition of being uneducated, unaware, or uninformed.
+==English==
+
+===Noun===
+
+'''Ignorance'''
+
+# The condition of being uneducated, unaware, or uninformed.
