--- a/wiki/transgressive.wikitext
+++ b/wiki/transgressive.wikitext
@@ -1,3 +1,9 @@
-Transgressive. Going beyond generally accepted boundaries; violating usual practice. 
+==English==
+
+===Noun===
+
+'''Transgressive'''
+
+# Going beyond generally accepted boundaries; violating usual practice. 
 
 “"P.S.' is the second movie in two weeks to use reincarnation as the excuse for transgressive sex." - Roger Ebert
