--- a/wiki/procrastinative.wikitext
+++ b/wiki/procrastinative.wikitext
@@ -1,6 +1,6 @@
 ==Latin==
 ===Etymology===
-Related to '''[[procrastinario]]''', ''procrastination''
+Related to ''[[procrastination]]''
 
 ===Adjective===
 '''procrastinative'''
