--- a/wiki/conjunction.wikitext
+++ b/wiki/conjunction.wikitext
@@ -15,6 +15,7 @@
 * Italian: [[congiunzione]] ''i''
 * Latin: [[coniunctio]] ''f''
 * Lithuanian: [[jungtukas]] ''m''
+* Polish: [[spójnik]] ''m''
 * Portuguese: [[conjunção]] ''f''
 * Spanish: [[conjunción]] ''f''
 
