--- a/wiki/albo.wikitext
+++ b/wiki/albo.wikitext
@@ -1,6 +1,12 @@
+==[[Polish]]==
+===[[Conjunction]]===
+'''albo'''
+#[[or]]
+#[[either]]
+
 ----
 
 ==[[Romanica]]==
-===Adjective===
+===[[Adjective]]===
 <b>albo ''m'', alba ''f''</b>
 #[[white]], [[of]] [[the]] [[color]] [[white]]
