--- a/wiki/conjunction.wikitext
+++ b/wiki/conjunction.wikitext
@@ -1,9 +1,15 @@
+==English==
 ===Noun===
 '''conjunction'''
 
 #A word used to join other words or phrases together into sentences. The specific conjunction used shows how the two joined parts are related.
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 * Dutch: [[voegwoord]] ''n''
 * [[Esperanto]]: [[konjunkcio]]
 * Finnish: [[konjunktio]], [[sidesana]]
@@ -13,10 +19,17 @@
 * Indonesian: [[kata]] [[sambung]], [[kata]] [[hubung|penghubung]]
 * [[Interlingua]]: conjunction
 * Italian: [[congiunzione]] ''i''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 * Latin: [[coniunctio]] ''f''
 * Lithuanian: [[jungtukas]] ''m''
 * Polish: [[spójnik]] ''m''
 * Portuguese: [[conjunção]] ''f''
 * Spanish: [[conjunción]] ''f''
+|}
+|}
 
 [[Category:English parts of speech]]
