--- a/wiki/adultery.wikitext
+++ b/wiki/adultery.wikitext
@@ -5,3 +5,18 @@
 '''Adultery'''
 
 # extramarital sex that willfully and maliciously interferes with marriage relations. (From [http://www.cogsci.princeton.edu/cgi-bin/webwn2.0?stage=1&word=adultery])
+
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[aviorikos]], [[huorinteko]], [[huoruus]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
