--- a/wiki/bush.wikitext
+++ b/wiki/bush.wikitext
@@ -5,3 +5,18 @@
 '''bush'''
 
 # A [[horticultural]] rather than strictly [[botanical]] category of [[woody plant]] that is distinguished from a tree by its multiple stems and lower height; usually less than 6m tall.
+
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[pensas]], [[puska]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
